--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #1b2144;
 }
 
 @theme inline {
@@ -14,13 +14,18 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #1b2144;
+    --foreground: #f0f0f0;
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
+  --not-curr-month: #5e5e5e;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  font-size: large;
 }
